# solar-amortisation-home-assistant

./: AGENTS.md  CHANGELOG.md  README.md  anforderungen-plan.txt  hacs.json  pyproject.toml
.github/workflows/: validate.yaml
custom_components/solar_amortisation/: __init__.py  calculations.py  config_flow.py  const.py  coordinator.py  diagnostics.py  energy_dashboard.py  manifest.json  models.py  sensor.py  statistics.py  statistics_importer.py  storage.py  strings.json
custom_components/solar_amortisation/brand/: logo-icon-sun-amortisation.afdesign  logo-icon-sun-amortisation.afdesign~lock~
custom_components/solar_amortisation/translations/: de.json
docs/internal/: README.md
docs/internal/skills/home-assistant-custom-integration/: SKILL.md
tests/: test_calculations.py
