[project]
name = "solar-amortisation-ha"
version = "0.1.0"
description = "Home Assistant custom integration for tracking solar amortisation by site."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
